<resources>
    <string name="app_name">scnu_sky</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">注册账号</string>
    <string name="user_name">用户名</string>
    <string name="nick_name">昵称</string>
    <string name="password">密码</string>
    <string name="sex">性别</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="check_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="title_activity_discuss_page">DiscussPageActivity</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="title_activity_sex_change">SexChangeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_">ActivityActivity</string>
    <string name="title_activity_act">ActActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="discuss_item_title">标题</string>

    <string name="title_activity_position_detail">Position_detail</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
</resources>
