<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    <TextView
        android:id="@+id/title_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_name"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        />
    <TextView
        android:id="@+id/title_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/title_check_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/check_password"/>
    <EditText
        android:id="@+id/check_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/title_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/sex"/>
    <Spinner
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    <Button
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="23sp"
        android:text="@string/confirm"/>
</LinearLayout>
