<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.administrator.huashixingkong.activity.LoginActivity">

    <EditText
        android:id="@+id/userNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/user_name"
        android:drawablePadding="20dp"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/login_edit_text_normal"
        android:textColor="#ffffff"
        />
    <!--
    <TextView
        android:id="@+id/text2"
        android:text="@string/password"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/text1"
        android:layout_marginTop="20dp"
        />android:layout_toRightOf="@id/text2"-->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:drawablePadding="20dp"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/password_edit_text_normal"
        android:textColor="#ffffff"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#60ccffff"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@drawable/register_button"
        />
    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textSize="16sp"
        android:textColor="@drawable/register_button"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
